implement authorization, add role entity and migrations for role creation and seed